Going to try rewriting the scheduler.